force-app/main/default/objects/Product2/fields/Billing_Frequency_Options__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_Options__c</fullName>
    <label>Billing Frequency Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One Time Event</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Pay Per Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>