force-app/main/default/objects/Product2/fields/Channel_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Channel_to_Exclude__c</fullName>
    <description>Might need to make this a multi-select at some point as might be excluding partner channel from certain products.  Will override Region match to not product if Channel matches</description>
    <label>xChannel to Exclude</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Customer Care/Products</fullName>
            </value>
            <value>
                <fullName>Field Sales</fullName>
            </value>
            <value>
                <fullName>Finance&amp;Pricing</fullName>
            </value>
            <value>
                <fullName>Information Systems</fullName>
            </value>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>ISO Enterprise</fullName>
            </value>
            <value>
                <fullName>ISO Inbound</fullName>
            </value>
            <value>
                <fullName>ISO SMB</fullName>
            </value>
            <value>
                <fullName>IST Team</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Sales Engineers</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>