force-app/main/default/objects/Product2/fields/Channel_to_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Channel_to_Excluded__c</fullName>
    <label>Channel to Exclude</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>iMeetCentral</fullName>
            </value>
            <value>
                <fullName>Information Systems</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Major Accounts</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>ReadyTalk</fullName>
            </value>
            <value>
                <fullName>Sales Engineers</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>TalkPoint</fullName>
            </value>
            <value>
                <fullName>Tier One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>