force-app/main/default/objects/Product2/fields/Clone_for_PGi_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Clone_for_PGi_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is selected, then the product will copy over for PGI renewal deals</description>
    <inlineHelpText>If this checkbox is selected, then the product will copy over for PGI renewal deals</inlineHelpText>
    <label>Clone for PGi Renewal</label>
    <type>Checkbox</type>
</CustomField>