force-app/main/default/objects/Product2/fields/Clone_for_PGi_Renewals_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Clone_for_PGi_Renewals_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PGi Renewal Carry Forward</label>
    <type>Checkbox</type>
</CustomField>