force-app/main/default/objects/Product2/fields/Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate__c</fullName>
    <label>Cost Rate</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>