force-app/main/default/objects/Product2/fields/Edit_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Edit_Sales_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IF checked, the user can edit the Opportunity Product Sales Price.</description>
    <label>Edit Sales Price?</label>
    <type>Checkbox</type>
</CustomField>