force-app/main/default/objects/Product2/fields/Exclude_from_Package_Search__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Package_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is true, then product will not be displayed in the &apos;Opportunity Product Family&apos; search option.</description>
    <label>Exclude from Package Search</label>
    <type>Checkbox</type>
</CustomField>