force-app/main/default/objects/Product2/fields/Existing_Service_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Existing_Service_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Service Eligible</label>
    <type>Checkbox</type>
</CustomField>