force-app/main/default/objects/Product2/fields/iMC_Product_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Product_Record_ID__c</fullName>
    <label>iMC Product Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>