force-app/main/default/objects/Product2/fields/iMCNRRProduct__c.field-meta.xml
<CustomField>
    <fullName>iMCNRRProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iMC NRR Product</label>
    <type>Checkbox</type>
</CustomField>