force-app/main/default/objects/Product2/fields/Min_Commitment_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Min_Commitment_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min Commitment Eligible</label>
    <type>Checkbox</type>
</CustomField>