force-app/main/default/objects/Product2/fields/Modality_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Modality_Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>Modality Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>