force-app/main/default/objects/Product2/fields/NetSuite_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Id__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>