force-app/main/default/objects/Product2/fields/NetSuite_Item__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Item__c</fullName>
    <formula>IF(NetSuite_Id__c == null, &quot;&quot;, HYPERLINK(&quot;https://system.netsuite.com/app/common/item/item.nl?id=&quot; + NetSuite_Id__c , &quot;View&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Item</label>
    <type>Text</type>
</CustomField>