force-app/main/default/objects/Product2/fields/RT_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>RT Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>