force-app/main/default/objects/Product2/fields/TalkPoint_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>TalkPoint_Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>TalkPoint Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>