force-app/main/default/objects/Product2/fields/X6Sense_Tag__c.field-meta.xml
<CustomField>
    <fullName>X6Sense_Tag__c</fullName>
    <label>6Sense Tag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unified Communications</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Conferencing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>