force-app/main/default/objects/Product2/recordTypes/iMC_Product.recordType-meta.xml
<RecordType>
    <fullName>iMC_Product</fullName>
    <active>true</active>
    <description>iMeet Central Product Records Only</description>
    <label>iMC Product</label>
</RecordType>