force-app/main/default/objects/Product2/recordTypes/PGi_Product.recordType-meta.xml
<RecordType>
    <fullName>PGi_Product</fullName>
    <active>true</active>
    <label>PGi Product</label>
</RecordType>