force-app/main/default/objects/Product2/recordTypes/ReadyTalk_Product.recordType-meta.xml
<RecordType>
    <fullName>ReadyTalk_Product</fullName>
    <active>true</active>
    <label>ReadyTalk Product</label>
</RecordType>