force-app/main/default/objects/Product2/recordTypes/TalkPoint_Product.recordType-meta.xml
<RecordType>
    <fullName>TalkPoint_Product</fullName>
    <active>true</active>
    <label>TalkPoint Product</label>
</RecordType>