force-app/main/default/objects/Product2/listViews/All_Active_iMC_Products_NRR.listView-meta.xml
<ListView>
    <fullName>All_Active_iMC_Products_NRR</fullName>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Region__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SFDC_18_Product_ID__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Channel_to_Excluded__c</columns>
    <columns>Channel_to_Included__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.iMC_Product</value>
    </filters>
    <filters>
        <field>iMCNRRProduct__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active iMC Products (NRR)</label>
    <language>en_US</language>
</ListView>