force-app/main/default/objects/Product2/listViews/All_Active_Modality_Products.listView-meta.xml
<ListView>
    <fullName>All_Active_Modality_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Type__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>0121B000001hgIS</value>
    </filters>
    <label>All Active Modality Products</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>