force-app/main/default/objects/Product2/listViews/All_Inactive_Products.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Channel_to_Exclude__c</columns>
    <columns>Channel_to_Include__c</columns>
    <columns>Region__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive Products</label>
    <language>en_US</language>
</ListView>