force-app/main/default/objects/Product2/listViews/All_Non_American_Products.listView-meta.xml
<ListView>
    <fullName>All_Non_American_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>notContain</operation>
        <value>American</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Non-American Products</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>