force-app/main/default/objects/Product2/listViews/All_TPx_Products.listView-meta.xml
<ListView>
    <fullName>All_TPx_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Region__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Unit_Type_Options__c</columns>
    <columns>Billing_Frequency_Options__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>TPx Unified Communications</value>
    </filters>
    <label>All TPx Products</label>
    <language>en_US</language>
</ListView>