force-app/main/default/objects/Product2/listViews/AllReadyTalkProducts.listView-meta.xml
<ListView>
    <fullName>AllReadyTalkProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.ReadyTalk_Product</value>
    </filters>
    <label>All ReadyTalk Products</label>
    <sharedTo>
        <roleAndSubordinates>ReadyTalk_Channel</roleAndSubordinates>
    </sharedTo>
</ListView>