force-app/main/default/objects/Product2/listViews/z_Admin_Misc.listView-meta.xml
<ListView>
    <fullName>z_Admin_Misc</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Channel_to_Exclude__c</columns>
    <columns>Channel_to_Include__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>z-Admin-Misc</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>